objects/UNITY_Vendor_Preference__c.object
<CustomObject>
    <description>UNITY project - Stores preferred and Do NOT USE vendor list at customer site level</description>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Preference By Customer</relationshipLabel>
        <relationshipName>Vendor_Preference_By_Customer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred</fullName>
                    <default>true</default>
                    <label>Preferred</label>
                </value>
                <value>
                    <fullName>Do Not Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Preference By Vendor</relationshipLabel>
        <relationshipName>Vendor_Preference_By_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Preference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VP-{0000000}</displayFormat>
        <label>Vendor Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor_Preference</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>